# py-cross-compile

./: README.md  pyproject.toml
.github/workflows/: build-windows.yml  main.yml
.github/workflows/.github/workflows/: build-windows.yml
src/pdf_converter/: app.py
